--- a/content/圖片.html
+++ b/content/圖片.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='圖片.html'>圖片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,9 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
-<p>4082313101<img alt="" height="211" src="./../images/main111.jpg" width="523"/></p>
-<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=519d62668524881f5e22d033c70d3aa8" width="800"></iframe></p><br /> </div>
+    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <br /><h1>圖片</h1>
+<p><img alt="" height="219" src="./../images/main111.jpg" width="543"/></p><br />關於 << <a href='關於.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
