--- a/content/about.html
+++ b/content/about.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='亂數分組程式.html'>亂數分組程式</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,9 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='亂數分組程式.html'>Next</a> >> 亂數分組程式<br /><h1>about</h1>
+    <div id="tipue_search_content"> <a href='迴圈程式.html'>Next</a> >> 迴圈程式<br /><h1>about</h1>
 <p><iframe height="500" src="https://dartpad.dev/embed-inline.html?id=e936951b9e0613d198b66d1544dd8e1a" width="543"></iframe></p>
-<br /> <a href='亂數分組程式.html'>Next</a> >> 亂數分組程式</div>
+<br /> <a href='迴圈程式.html'>Next</a> >> 迴圈程式</div>
         
     <!-- footer -->
       <div class="container">
