--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -137,7 +137,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='亂數分組程式.html'>亂數分組程式</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -148,4 +148,4 @@ init_mathjax();
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='about.html'>about</a><ul><li><a href='亂數分組程式.html'>亂數分組程式</a></li></ul><li><a href='image.html'>image</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='about.html'>about</a><ul><li><a href='迴圈程式.html'>迴圈程式</a></li></ul><li><a href='image.html'>image</a></li></ul></section></div></body></html>
