--- a/config/content.htm
+++ b/config/content.htm
@@ -8,6 +8,47 @@
     print('hello ${i + 1}');
   }
 }</pre>
-<p></p>
+<h2>引用倉儲 Dart 程式</h2>
+<p><span>程式碼位於:</span><a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for</a></p>
+<p><span>包含 yaml 檔案:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml</a></span></p>
+<p><span>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/main.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/main.dart</a></span></p>
+<p><span>若為 console 模式, 利用 main.dart 與 dartpad_metadata.yaml 透過 embed-dart.html </span><span>導入.</span></p>
+<p>若為網頁模式, 利用 main.dart, index.html style.css 與 dartpad_metadata.yaml 透過 embed-html.html 導入.</p>
+<p><span>main.dart 原始碼:</span></p>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">// 在所有函式定義外圍所宣告的變數, 稱為全域變數, 有效範圍包含各函式內部與外部
+// for 迴圈所使用的索引值, 宣告為整數 (integer)
+int i;
+// 累加起始值 start 宣告為整數, 且設為 1
+int start = 1;
+// 累加終止值 end 宣告為整數, 且設為 10
+int end = 10;
+// 累加總數值 sum 宣告為整數
+int sum;
+
+// 定義 main() 主函式內容, 目的在利用 for 迴圈進行整數的累加
+main(){
+  // 將前面已經宣告為全域整數的變數 sum 設為 0, 表示從 0 開始進行累加
+  sum = 0;
+  // 執行 for 迴圈內的整數累加設計, 使用前面已經宣告為全域整數的 i 作為索引變數
+  // 分別從 start 開始累加至 end, 且每次迴圈的索引值增加 1
+  for(i=start;i &lt;= end ;i++){
+    // 當索引變數 i 所對應的值小於或等於 end 時, 對 sum 變數加上 i
+    sum += i;
+    // 可以在 for 迴圈每一個階段運算時, 列出當時的 sum 對應值, 查驗是否正確
+    //print("$sum");
+  }
+  // for 迴圈累加完成後, 列出最後訊息
+  print('從 $start 累加至 $end 的總數值為 $sum');
+}</pre>
+<p><span>dartpad_metadata.yaml 設定檔案:</span></p>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false"># 說明此 yaml 檔案所引用程式的目的
+name: Dart for loop example1
+# 引用模式為純 dart 或 html 模式
+mode: dart
+# 所包含引入的程式名稱, 若為純 dart 則只包含 dart 程式, 若為 html 模式, 則加入 index.htm 與 style.css
+files:
+  - name: main.dart</pre>
+<p><span>利用 iframe 標註引入 For loop 程式:</span></p>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
 <h1>image</h1>
 <p><img alt="" height="219" src="/images/main111.jpg" width="543"/></p>
