--- a/content/about.html
+++ b/content/about.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
