--- a/content/迴圈程式.html
+++ b/content/迴圈程式.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>迴圈程式</h1>
+    <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='引用倉儲 Dart 程式.html'>Next</a> >> 引用倉儲 Dart 程式<br /><h1>迴圈程式</h1>
 <p>gist:<a href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20">https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20</a></p>
 <p><a href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20">https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20</a></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
@@ -157,8 +157,7 @@ init_mathjax();
     print('hello ${i + 1}');
   }
 }</pre>
-<p></p>
-<br />about << <a href='about.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
+<br />about << <a href='about.html'>Previous</a> <a href='引用倉儲 Dart 程式.html'>Next</a> >> 引用倉儲 Dart 程式</div>
         
     <!-- footer -->
       <div class="container">
