--- a/content/引用倉儲 Dart 程式.html
+++ b/content/引用倉儲 Dart 程式.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a><li><a href='第七周.html'>第七周</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">迴圈程式 << <a href='迴圈程式.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>引用倉儲 Dart 程式</h1>
+    <div id="tipue_search_content">迴圈程式 << <a href='迴圈程式.html'>Previous</a> <a href='第七周.html'>Next</a> >> 第七周<br /><h1>引用倉儲 Dart 程式</h1>
 <p><span>程式碼位於:</span><a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for</a></p>
 <p><span>包含 yaml 檔案:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml</a></span></p>
 <p><span>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/main.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/main.dart</a></span></p>
@@ -191,7 +191,7 @@ files:
   - name: main.dart</pre>
 <p><span>利用 iframe 標註引入 For loop 程式:</span></p>
 <p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
-<br />迴圈程式 << <a href='迴圈程式.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
+<br />迴圈程式 << <a href='迴圈程式.html'>Previous</a> <a href='第七周.html'>Next</a> >> 第七周</div>
         
     <!-- footer -->
       <div class="container">
