--- a/content/第七周.html
+++ b/content/第七周.html
@@ -149,9 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='迴圈程式.html'>Next</a> >> 迴圈程式<br /><h1>about</h1>
-<p><iframe height="500" src="https://dartpad.dev/embed-inline.html?id=e936951b9e0613d198b66d1544dd8e1a" width="543"></iframe></p>
-<br /> <a href='迴圈程式.html'>Next</a> >> 迴圈程式</div>
+    <div id="tipue_search_content">引用倉儲 Dart 程式 << <a href='引用倉儲 Dart 程式.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>第七周</h1>
+<p><img alt="" height="289" src="./../images/EXCEL_iHjXff8xBP.png" width="482"/></p>
+<p><img alt="" height="287" src="./../images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
+<p>簡諧運動</p>
+<br />引用倉儲 Dart 程式 << <a href='引用倉儲 Dart 程式.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
       <div class="container">
