--- a/config/content.htm
+++ b/config/content.htm
@@ -50,5 +50,9 @@ files:
   - name: main.dart</pre>
 <p><span>利用 iframe 標註引入 For loop 程式:</span></p>
 <p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<h2>第七周</h2>
+<p><img alt="" height="289" src="/images/EXCEL_iHjXff8xBP.png" width="482"/></p>
+<p><img alt="" height="287" src="/images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
+<p>簡諧運動</p>
 <h1>image</h1>
 <p><img alt="" height="219" src="/images/main111.jpg" width="543"/></p>
