--- a/content/5th week.html
+++ b/content/5th week.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a><li><a href='第七周.html'>第七周</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></li></ul></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,11 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">引用倉儲 Dart 程式 << <a href='引用倉儲 Dart 程式.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>第七周</h1>
-<p><img alt="" height="289" src="./../images/EXCEL_iHjXff8xBP.png" width="482"/></p>
-<p><img alt="" height="287" src="./../images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
-<p>簡諧運動</p>
-<br />引用倉儲 Dart 程式 << <a href='引用倉儲 Dart 程式.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
+    <div id="tipue_search_content">Weekly★progress << <a href='Weekly★progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式<br /><h1>5th week</h1>
+<br />Weekly★progress << <a href='Weekly★progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式</div>
         
     <!-- footer -->
       <div class="container">
