--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,9 @@
-<h1>about </h1>
-<p><iframe height="500" src="https://dartpad.dev/embed-inline.html?id=e936951b9e0613d198b66d1544dd8e1a" width="543"></iframe></p>
-<h2>迴圈程式</h2>
+<h1>First</h1><br/>Weekly<span>★</span>progress
+<h2><span style="color: #ff9900;"><strong>5th week</strong></span></h2>
+<h3><strong><span style="color: #008080;">Hello,world!程式</span></strong></h3>
+<p><iframe height="500" src="https://dartpad.dev/embed-inline.html?id=519d62668524881f5e22d033c70d3aa8" width="543"></iframe></p>
+<h2><span style="color: #99cc00;"><strong>6th week</strong></span></h2>
+<h3><strong><span style="color: #333399;">LOOP </span></strong></h3>
 <p>gist:<a href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20">https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20</a></p>
 <p><a href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20">https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20</a></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
@@ -8,47 +11,110 @@
     print('hello ${i + 1}');
   }
 }</pre>
-<h2>引用倉儲 Dart 程式</h2>
+<h2><strong><span style="color: #003366;">7th week</span></strong></h2>
+<h3><strong><span style="color: #33cccc;">引用倉儲 Dart 程式(rungekutta)</span></strong></h3>
 <p><span>程式碼位於:</span><a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for</a></p>
 <p><span>包含 yaml 檔案:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml</a></span></p>
-<p><span>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/main.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/main.dart</a></span></p>
-<p><span>若為 console 模式, 利用 main.dart 與 dartpad_metadata.yaml 透過 embed-dart.html </span><span>導入.</span></p>
-<p>若為網頁模式, 利用 main.dart, index.html style.css 與 dartpad_metadata.yaml 透過 embed-html.html 導入.</p>
-<p><span>main.dart 原始碼:</span></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">// 在所有函式定義外圍所宣告的變數, 稱為全域變數, 有效範圍包含各函式內部與外部
-// for 迴圈所使用的索引值, 宣告為整數 (integer)
-int i;
-// 累加起始值 start 宣告為整數, 且設為 1
-int start = 1;
-// 累加終止值 end 宣告為整數, 且設為 10
-int end = 10;
-// 累加總數值 sum 宣告為整數
-int sum;
+<p><span>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungeKutta.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungeKutta.dart</a> </span></p>
+<p><span>若為 console 模式, 利用 rungekutta.dart 與 dartpad_metadata.yaml 透過 embed-dart.html </span><span>導入.</span></p>
+<p>若為網頁模式, 利用 rungekutta.dart, index.html style.css 與 dartpad_metadata.yaml 透過 embed-html.html 導入.</p>
+<p><span>rungekutta.dart 原始碼:</span></p>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">// 下列 Dart 程式, 利用 Runge Kutta 迭代運算法, 解常微分方程式
+// 設 t 為時間, x 則設為物體的位移
+// 假設要解 F=ma 的單一質量加上彈簧 (常數為 k) 與黏滯阻尼 (常數為 b)
+// f 為沿位移方向的施力
+// dx/dt = v, dv/dt = (f-kx-bv)/m
+// dx / dt = (t - x)/2, 起始值 t0=0, x0=1, 求 t=2 時的 x 值
+//
+// 已知起始值 t0 與 x0 後, 可以利用下列 rungeKutta 函式, 以
+// h 為每步階增量值, 求 dxdt 常微分方程式任一 t 的對應值 x
+// 定義函式 rungeKutta, 共有四個輸入變數
+// 物體質量
+const num m = 1;
+// 對質量的施力 f
+const num f = 0.0;
+// 彈簧係數
+const num k = 1;
+// 阻尼係數
+const num b = 1;
 
-// 定義 main() 主函式內容, 目的在利用 for 迴圈進行整數的累加
-main(){
-  // 將前面已經宣告為全域整數的變數 sum 設為 0, 表示從 0 開始進行累加
-  sum = 0;
-  // 執行 for 迴圈內的整數累加設計, 使用前面已經宣告為全域整數的 i 作為索引變數
-  // 分別從 start 開始累加至 end, 且每次迴圈的索引值增加 1
-  for(i=start;i &lt;= end ;i++){
-    // 當索引變數 i 所對應的值小於或等於 end 時, 對 sum 變數加上 i
-    sum += i;
-    // 可以在 for 迴圈每一個階段運算時, 列出當時的 sum 對應值, 查驗是否正確
-    //print("$sum");
+// 呼叫運算時, 需要起始時間, 終點時間, 位移起始值與速度起始值, 增量 h
+rungeKutta(t0, x0, v0, t, h) {
+  // 利用步階增量值 h 與 t 的起始及終點值
+  // 計算需要迭代的次數 n
+  int n = ((t - t0) / h).toInt();
+  // 宣告 x 為雙浮點數, 且設為起始值 x0
+  double x = x0;
+  // 宣告 v 為雙浮點數, 且設為起始值 v0
+  double v = v0;
+
+  // 模擬運算前, 列出起始條件
+  // 只列到小數點第三位, 時間、位移與速度以 \t  隔開, \t 代表插入 tab 符號, 可將資料複製到 Excel 進行繪圖
+  print("${t0.toStringAsFixed(3)} \t ${x.toStringAsFixed(3)} \t ${v.toStringAsFixed(3)}");
+
+  // 利用已知的 t0, x0, t 終點值與步階增量值 h, 迭代求 x 對應值
+  // 索引值 i 將每次增量 1, 從 i=1 執行 for 環圈至 i=n
+  for (int i = 1; i &lt;= n; i++) {
+    // 將此階段的 t 與 x 值代入 dxdt 與 dvdt 函式求下列四個浮點變數值
+    // 因為必須兩個函式耦合, 必須同時計算
+    double xk1 = h * dxdt(t0, x, v);
+    double vk1 = h * dvdt(t0, x, v);
+    double xk2 = h * dxdt(t0 + 0.5 * h, x + 0.5 * xk1, v + 0.5 * vk1);
+    double vk2 = h * dvdt(t0 + 0.5 * h, x + 0.5 * xk1, v + 0.5 * vk1);
+    double xk3 = h * dxdt(t0 + 0.5 * h, x + 0.5 * xk2, v + 0.5 * vk2);
+    double vk3 = h * dvdt(t0 + 0.5 * h, x + 0.5 * xk2, v + 0.5 * vk2);
+    double xk4 = h * dxdt(t0 + h, x + xk3, v + vk3);
+    double vk4 = h * dvdt(t0 + h, x + xk3, v + vk3);
+    // 利用上述四個變數值求此步階增量後的對應 x 值
+    x = x + (1.0 / 6.0) * (xk1 + 2 * xk2 + 2 * xk3 + xk4);
+    v = v + (1.0 / 6.0) * (vk1 + 2 * vk2 + 2 * vk3 + vk4);
+    // 每次 for 迴圈執行最後, 準備計算下一個步階增量後的 x 對應值
+    // t 起始值配合步階增量值 h, 進行增量
+    t0 = t0 + h;
+    // 列出各模擬運算時間點所得到的結果
+    // 只列到小數點第三位, 時間、位移與速度以 \t  隔開, \t 代表插入 tab 符號, 可將資料複製到 Excel 進行繪圖
+  print("${t0.toStringAsFixed(3)} \t ${x.toStringAsFixed(3)} \t ${v.toStringAsFixed(3)}");
   }
-  // for 迴圈累加完成後, 列出最後訊息
-  print('從 $start 累加至 $end 的總數值為 $sum');
+
+  // 完成 for 迴圈迭代後, 傳回與 t 終點值對應的 x 值
+  return [x, v];
+}
+
+// 將微分方程式 "dx / dt = v" 定義為 dxdt 函式
+dxdt(t, x, v) {
+  return v;
+}
+
+// dx/dt = v, dv/dt = (f-kx-bv)/m
+dvdt(t, x, v) {
+  return (f - k * x - b * v) / m;
+}
+
+// 定義 main() 主函式內容, 目的在利用 rungeKutta 函式
+// 解常微分方程式
+main() {
+// Driver method
+// num 資料型別可以是整數或雙浮點數
+  num t0 = 0;
+  num x0 = 1;
+  num v0 = 0;
+  num t = 5;
+  double h = 0.1;
+  rungeKutta(t0, x0, v0, t, h);
 }</pre>
 <p><span>dartpad_metadata.yaml 設定檔案:</span></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false"># 說明此 yaml 檔案所引用程式的目的
-name: Dart for loop example1
+name: Dart for rungeKutta example1
 # 引用模式為純 dart 或 html 模式
 mode: dart
 # 所包含引入的程式名稱, 若為純 dart 則只包含 dart 程式, 若為 html 模式, 則加入 index.htm 與 style.css
 files:
-  - name: main.dart</pre>
-<p><span>利用 iframe 標註引入 For loop 程式:</span></p>
+  - name: rungeKutta.dart</pre>
+<p><span>利用 iframe 標註引入 For RungeKutta 程式:</span></p>
 <p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<h3><strong><span style="color: #99cc00;">rungekutta chart</span></strong></h3>
+<p><img alt="" height="289" src="/images/EXCEL_iHjXff8xBP.png" width="482"/></p>
+<p><img alt="" height="287" src="/images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
+<p>簡諧運動</p>
 <h1>image</h1>
 <p><img alt="" height="219" src="/images/main111.jpg" width="543"/></p>
