--- a/content/6th week.html
+++ b/content/6th week.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a><li><a href='第七周.html'>第七周</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></li></ul></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,15 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='引用倉儲 Dart 程式.html'>Next</a> >> 引用倉儲 Dart 程式<br /><h1>迴圈程式</h1>
-<p>gist:<a href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20">https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20</a></p>
-<p><a href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20">https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20</a></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
-  for (int i = 0; i &lt; 5; i++) {
-    print('hello ${i + 1}');
-  }
-}</pre>
-<br />about << <a href='about.html'>Previous</a> <a href='引用倉儲 Dart 程式.html'>Next</a> >> 引用倉儲 Dart 程式</div>
+    <div id="tipue_search_content">Hello,world!程式 << <a href='Hello,world!程式.html'>Previous</a> <a href='LOOP.html'>Next</a> >> LOOP<br /><h1>6th week</h1>
+<br />Hello,world!程式 << <a href='Hello,world!程式.html'>Previous</a> <a href='LOOP.html'>Next</a> >> LOOP</div>
         
     <!-- footer -->
       <div class="container">
