--- a/content/image.html
+++ b/content/image.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='about.html'>about</a><ul class='dropdown'><li><a href='迴圈程式.html'>迴圈程式</a><li><a href='引用倉儲 Dart 程式.html'>引用倉儲 Dart 程式</a><li><a href='第七周.html'>第七周</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></li></ul></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">第七周 << <a href='第七周.html'>Previous</a> <br /><h1>image</h1>
-<p><img alt="" height="219" src="./../images/main111.jpg" width="543"/></p><br />第七周 << <a href='第七周.html'>Previous</a> </div>
+    <div id="tipue_search_content">rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <br /><h1>image</h1>
+<p><img alt="" height="219" src="./../images/main111.jpg" width="543"/></p><br />rungekutta chart << <a href='rungekutta chart.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
