--- a/config/content.htm
+++ b/config/content.htm
@@ -1,9 +1,9 @@
 <h1>Weekly★progress</h1>
-<h2><span style="color: #ff9900;"><strong>5th week</strong></span></h2>
-<h3><strong><span style="color: #008080;">Hello,world!程式</span></strong></h3>
+<h2>5th week</h2>
+<h3>Hello,world!程式</h3>
 <p><iframe height="500" src="https://dartpad.dev/embed-inline.html?id=519d62668524881f5e22d033c70d3aa8" width="543"></iframe></p>
-<h2><span style="color: #99cc00;"><strong>6th week</strong></span></h2>
-<h3><strong><span style="color: #333399;">LOOP </span></strong></h3>
+<h2>6th week</h2>
+<h3>LOOP</h3>
 <p>gist:<a href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20">https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20</a></p>
 <p><a href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20">https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20</a></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
@@ -11,11 +11,11 @@
     print('hello ${i + 1}');
   }
 }</pre>
-<h2><strong><span style="color: #003366;">7th week</span></strong></h2>
-<h3><strong><span style="color: #33cccc;">引用倉儲 Dart 程式(rungekutta)</span></strong></h3>
+<h2>7th week</h2>
+<h3>引用倉儲 Dart 程式(rungekutta)</h3>
 <p><span>程式碼位於:</span><a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for</a></p>
 <p><span>包含 yaml 檔案:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml</a></span></p>
-<p><span>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungeKutta.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungeKutta.dart</a> </span></p>
+<p>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart</a> </p>
 <p><span>若為 console 模式, 利用 rungekutta.dart 與 dartpad_metadata.yaml 透過 embed-dart.html </span><span>導入.</span></p>
 <p>若為網頁模式, 利用 rungekutta.dart, index.html style.css 與 dartpad_metadata.yaml 透過 embed-html.html 導入.</p>
 <p><span>rungekutta.dart 原始碼:</span></p>
@@ -111,8 +111,7 @@ mode: dart
 files:
   - name: rungeKutta.dart</pre>
 <p><span>利用 iframe 標註引入 For RungeKutta 程式:</span></p>
-<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
-<h3><strong><span style="color: #99cc00;">rungekutta chart</span></strong></h3>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p><h3>rungekutta chart</h3>
 <p><img alt="" height="289" src="/images/EXCEL_iHjXff8xBP.png" width="482"/></p>
 <p><img alt="" height="287" src="/images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
 <p>簡諧運動</p>
