--- a/content/rungekutta chart.html
+++ b/content/rungekutta chart.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></li></ul></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li><a href='8th week.html'>8th week</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,11 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>rungekutta chart</h1>
+    <div id="tipue_search_content">引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week<br /><h1>rungekutta chart</h1>
 <p><img alt="" height="289" src="./../images/EXCEL_iHjXff8xBP.png" width="482"/></p>
 <p><img alt="" height="287" src="./../images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
 <p>簡諧運動</p>
-<br />引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
+<br />引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week</div>
         
     <!-- footer -->
       <div class="container">
