--- a/config/content.htm
+++ b/config/content.htm
@@ -118,6 +118,6 @@ files:
 <p>簡諧運動</p>
 <h2>8th week</h2>
 <p><a href="https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be">https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be</a></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://youtu.be/841j6aYTY0M" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/841j6aYTY0M" width="560"></iframe></p>
 <h1>image</h1>
 <p><img alt="" height="219" src="/images/main111.jpg" width="543"/></p>
