--- a/content/8th week.html
+++ b/content/8th week.html
@@ -151,7 +151,7 @@ init_mathjax();
         </header>
     <div id="tipue_search_content">rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>8th week</h1>
 <p><a href="https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be">https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be</a></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://youtu.be/841j6aYTY0M" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/841j6aYTY0M" width="560"></iframe></p>
 <br />rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
