--- a/config/content.htm
+++ b/config/content.htm
@@ -117,7 +117,13 @@ files:
 <p><img alt="" height="287" src="/images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
 <p>簡諧運動</p>
 <h2>8th week</h2>
-<p><a href="https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be">https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be</a></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/841j6aYTY0M" width="560"></iframe></p>
+<h3>EX3</h3>
+<p><img caption="false" height="37" src="/images/EX3-1-2.png" width="285"/></p>
+<p style="text-align: center;"><img caption="false" height="97" src="/images/EX3-1-1.png" width="200"/></p>
+<p style="text-align: left;"><img caption="false" height="38" src="/images/EX3-2-1.png" width="250"/></p>
+<p style="text-align: center;"><img alt="" height="91" src="/images/EX3-2-2.png" width="200"/></p>
+<p style="text-align: left;"><img alt="" height="24" src="/images/EX3-3-1.png" width="250"/><img alt="600" caption="false" height="34" src="/images/EX3-3-2.png" width="600"/></p>
+<p style="text-align: center;"><img caption="false" height="124" src="/images/EX3-3-3.png" width="200"/></p>
+<p style="text-align: left;"><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=25f3dd4d1af915d8e7e42c5d69313985" width="900"></iframe></p>
 <h1>image</h1>
 <p><img alt="" height="219" src="/images/main111.jpg" width="543"/></p>
