--- a/content/8th week.html
+++ b/content/8th week.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li><a href='8th week.html'>8th week</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></li></ul></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,10 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>8th week</h1>
-<p><a href="https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be">https://www.youtube.com/watch?v=841j6aYTY0M&amp;feature=youtu.be</a></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/841j6aYTY0M" width="560"></iframe></p>
-<br />rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
+    <div id="tipue_search_content">rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='EX3.html'>Next</a> >> EX3<br /><h1>8th week</h1>
+<br />rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='EX3.html'>Next</a> >> EX3</div>
         
     <!-- footer -->
       <div class="container">
