--- a/content/EX3.html
+++ b/content/EX3.html
@@ -149,11 +149,15 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week<br /><h1>rungekutta chart</h1>
-<p><img alt="" height="289" src="./../images/EXCEL_iHjXff8xBP.png" width="482"/></p>
-<p><img alt="" height="287" src="./../images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
-<p>簡諧運動</p>
-<br />引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week</div>
+    <div id="tipue_search_content">8th week << <a href='8th week.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>EX3</h1>
+<p><img caption="false" height="37" src="./../images/EX3-1-2.png" width="285"/></p>
+<p style="text-align: center;"><img caption="false" height="97" src="./../images/EX3-1-1.png" width="200"/></p>
+<p style="text-align: left;"><img caption="false" height="38" src="./../images/EX3-2-1.png" width="250"/></p>
+<p style="text-align: center;"><img alt="" height="91" src="./../images/EX3-2-2.png" width="200"/></p>
+<p style="text-align: left;"><img alt="" height="24" src="./../images/EX3-3-1.png" width="250"/><img alt="600" caption="false" height="34" src="./../images/EX3-3-2.png" width="600"/></p>
+<p style="text-align: center;"><img caption="false" height="124" src="./../images/EX3-3-3.png" width="200"/></p>
+<p style="text-align: left;"><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=25f3dd4d1af915d8e7e42c5d69313985" width="900"></iframe></p>
+<br />8th week << <a href='8th week.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
       <div class="container">
