第九周分組任務開始

--- a/content/9th week.html
+++ b/content/9th week.html
@@ -149,9 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">5th week << <a href='5th week.html'>Previous</a> <a href='6th week.html'>Next</a> >> 6th week<br /><h1>Hello,world!程式</h1>
-<p><iframe height="500" src="https://dartpad.dev/embed-inline.html?id=519d62668524881f5e22d033c70d3aa8" width="543"></iframe></p>
-<br />5th week << <a href='5th week.html'>Previous</a> <a href='6th week.html'>Next</a> >> 6th week</div>
+    <div id="tipue_search_content">EX3 << <a href='EX3.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>9th week</h1>
+<p>分組倉儲:<a href="https://github.com/40823131/cp2019ag6">https://github.com/40823131/cp2019ag6</a></p>
+<br />EX3 << <a href='EX3.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
       <div class="container">
