--- a/content/EX3.html
+++ b/content/EX3.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></li></ul></ul><li><a href='image.html'>image</a></li>
+                     <li class='has-children'><a href='Weekly★progress.html'>Weekly★progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='9th week.html'>9th week</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">8th week << <a href='8th week.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>EX3</h1>
+    <div id="tipue_search_content">8th week << <a href='8th week.html'>Previous</a> <a href='9th week.html'>Next</a> >> 9th week<br /><h1>EX3</h1>
 <p><img caption="false" height="37" src="./../images/EX3-1-2.png" width="285"/></p>
 <p style="text-align: center;"><img caption="false" height="97" src="./../images/EX3-1-1.png" width="200"/></p>
 <p style="text-align: left;"><img caption="false" height="38" src="./../images/EX3-2-1.png" width="250"/></p>
@@ -157,7 +157,7 @@ init_mathjax();
 <p style="text-align: left;"><img alt="" height="24" src="./../images/EX3-3-1.png" width="250"/><img alt="600" caption="false" height="34" src="./../images/EX3-3-2.png" width="600"/></p>
 <p style="text-align: center;"><img caption="false" height="124" src="./../images/EX3-3-3.png" width="200"/></p>
 <p style="text-align: left;"><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=25f3dd4d1af915d8e7e42c5d69313985" width="900"></iframe></p>
-<br />8th week << <a href='8th week.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
+<br />8th week << <a href='8th week.html'>Previous</a> <a href='9th week.html'>Next</a> >> 9th week</div>
         
     <!-- footer -->
       <div class="container">
