--- a/content/10th week.html
+++ b/content/10th week.html
@@ -149,8 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Weekly★progress << <a href='Weekly★progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式<br /><h1>5th week</h1>
-<br />Weekly★progress << <a href='Weekly★progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式</div>
+    <div id="tipue_search_content">EX3 << <a href='EX3.html'>Previous</a> <a href='11th week.html'>Next</a> >> 11th week<br /><h1>10th week</h1>
+<p>分組倉儲:<a href="https://github.com/40823131/cp2019ag6">https://github.com/40823131/cp2019ag6</a></p>
+<br />EX3 << <a href='EX3.html'>Previous</a> <a href='11th week.html'>Next</a> >> 11th week</div>
         
     <!-- footer -->
       <div class="container">
