--- a/content/11th week.html
+++ b/content/11th week.html
@@ -149,8 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Weekly★progress << <a href='Weekly★progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式<br /><h1>5th week</h1>
-<br />Weekly★progress << <a href='Weekly★progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式</div>
+    <div id="tipue_search_content">10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature<br /><h1>11th week</h1>
+<br />10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature</div>
         
     <!-- footer -->
       <div class="container">
