任務二影片嵌入

--- a/content/13th week.html
+++ b/content/13th week.html
@@ -151,6 +151,7 @@ init_mathjax();
         </header>
     <div id="tipue_search_content">temperature << <a href='temperature.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>13th week</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0RtGLI-pglg" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/r_5GxQ0wICo" width="560"></iframe></p>
 <br />temperature << <a href='temperature.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
