--- a/content/Weekly progress.html
+++ b/content/Weekly progress.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Weekly progress.html'>Weekly progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='10th week.html'>10th week</a><li class='has-children'><a href='11th week.html'>11th week</a><ul class='dropdown'><li><a href='temperature.html'>temperature</a></li></ul><li><a href='13th week.html'>13th week</a></li></ul><li><a href='image.html'>image</a></li>
+                     <li><a href='W16 查驗考試.html'>W16 查驗考試</a><li class='has-children'><a href='Weekly progress.html'>Weekly progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='10th week.html'>10th week</a><li class='has-children'><a href='11th week.html'>11th week</a><ul class='dropdown'><li><a href='temperature.html'>temperature</a></li></ul><li><a href='13th week.html'>13th week</a></li></ul><li><a href='image.html'>image</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='5th week.html'>Next</a> >> 5th week<br /><h1>Weekly progress</h1>
+    <div id="tipue_search_content">W16 查驗考試 << <a href='W16 查驗考試.html'>Previous</a> <a href='5th week.html'>Next</a> >> 5th week<br /><h1>Weekly progress</h1>
 <!-- 透過 getDart(dirname) 取位於 downloads/dart_ex/ 目錄中 dirname 目錄中的 Dart 程式碼 -->
 <script>
 function getDart(dirname){
@@ -180,7 +180,7 @@ document.getElementById("iframe").height = 600 ;
 <p><button onclick="getHtmlDart('usaflag')">USA Flag</button></p>
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
 <p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/rungekutta&amp;theme=dark" width="800"></iframe></p>
-<br /> <a href='5th week.html'>Next</a> >> 5th week</div>
+<br />W16 查驗考試 << <a href='W16 查驗考試.html'>Previous</a> <a href='5th week.html'>Next</a> >> 5th week</div>
         
     <!-- footer -->
       <div class="container">
